--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,31 @@
 services:
+  backend:
+    build: ./backend
+    ports:
+      - "8080:8080"
+    environment:
+      DB_URL: jdbc:mysql://db:3306/atina
+      DB_USER: user
+      DB_PASSWORD: root
+    depends_on:
+      - db
+    networks:
+      - atina-network
+  
+  frontend:
+    build: ./frontend
+    ports:
+      - "3000:80"
+    networks:
+      - atina-network
+
   db:
     image: mysql:8.0
     container_name: mysql_container
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: mydb
+      MYSQL_DATABASE: atina
       MYSQL_USER: user
       MYSQL_PASSWORD: password
     ports:
@@ -18,6 +38,6 @@ services:
     container_name: tomcat_container
     restart: always
     ports:
-      - "8080:8080"
+      - "8079:8080"
     depends_on:
       - db
