--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       MYSQL_PASSWORD: password
     volumes:
       - mysql-data:/var/lib/mysql
-      - ./script/init.sql:docker-entrypoint-initdb.d/init.sql
+      - ./scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "3306:3306"
     networks:
@@ -37,7 +37,7 @@ services:
   frontend:
     build: ./frontend
     ports:
-      - "3000:80"
+      - "3000:3000"
     environment:
       NEXT_PUBLIC_API_URL: http://backend:8080
     depends_on:
@@ -47,3 +47,4 @@ services:
       - private
 volumes:
   mysql-data:
+    driver: local
