--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "atina-react",
+  "name": "react-dir",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,9 +11,13 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.5"
+    "next": "15.3.0"
   },
   "devDependencies": {
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4"
   }
