--- a/app/frontend/Dockerfile
+++ b/app/frontend/Dockerfile
@@ -1,27 +1,45 @@
-# 1 - Estágio de construção com Node 18
-FROM node:18-alpine AS development
+# Dockerfile
+# Estágio de construção
+FROM node:20-alpine AS builder
 
-# 2 - Definir diretório de trabalho
-WORKDIR /app
-
-# 3 - Copiar arquivos de configuração
-COPY package.json pnpm-lock.yaml* ./
-COPY pnpm-workspace.yaml ./
-COPY tsconfig.json ./
-COPY next.config.ts ./
-COPY postcss.config.mjs ./
-
-# 4 - Instalar pnpm
+# Instala o pnpm via corepack
 RUN corepack enable && corepack prepare pnpm@latest --activate
 
-# 5 - Instalar dependências (incluindo devDependencies)
-RUN pnpm install
+WORKDIR /app
 
-# 6 - Copiar o restante dos arquivos
+# Copia arquivos de gerenciamento de dependências
+COPY package.json pnpm-lock.yaml* pnpm-workspace.yaml* ./
+
+# Instala dependências
+RUN pnpm install --frozen-lockfile
+
+# Copia o restante dos arquivos
 COPY . .
 
-# 7 - Expor a porta 3000
+# Constrói a aplicação
+RUN pnpm run build
+
+# Estágio de produção
+FROM node:20-alpine AS runner
+WORKDIR /app
+
+ENV NODE_ENV production
+
+# Instala o pnpm no estágio final
+RUN corepack enable && corepack prepare pnpm@latest --activate
+
+# Copia os arquivos necessários
+COPY --from=builder /app/package.json ./
+COPY --from=builder /app/pnpm-lock.yaml ./
+COPY --from=builder /app/next.config.ts ./
+COPY --from=builder /app/postcss.config.mjs ./
+COPY --from=builder /app/public ./public
+COPY --from=builder /app/src ./src
+COPY --from=builder /app/.next ./.next
+COPY --from=builder /app/node_modules ./node_modules
+
+# Expõe a porta
 EXPOSE 3000
 
-# 8 - Iniciar o servidor de desenvolvimento
-CMD ["pnpm", "dev"]
+# Comando de inicialização
+CMD ["pnpm", "start"]
